# C-CppCode

./: .gitignore
callLua/: CMakeLists.txt  lua.h  pb.c  pb.h
callLuaPbDll/: CMakeLists.txt  lua.c
callLua_protobuf/: CMakeLists.txt  lauxlib.h  main.cpp  pb.c  pb.h
cclass/: CMakeLists.txt  main.cpp  people.cpp  people.h
cdllmake/: library.c
cdlluse/: CMakeLists.txt  exportgo.h  library.h  main.c
cmakedll/: CMakeLists.txt  library.h
cppmakedll/: CMakeLists.txt  library.cpp  library.h
cppusedll/: CMakeLists.txt  exportgo.h  library.h  main.cpp
cusedll/: CMakeLists.txt  main.c
pbdll/: CMakeLists.txt  luaconf.h  pb.c  pb.h
